# fillit

./: CMakeLists.txt  Makefile  a.out  ex  ex1  file  fill2.c  fill3.c  fill4.c  fill5.c  fillit  fillit.c  fillit.h  fillit.h.gch  ft_fill2.c  ft_fill3.c  ft_fill4.c  ft_fill5.c  ft_find.c  ft_input.c  ft_twolist.c  ft_validity.c  get_next_line.c  get_next_line.h  get_next_line.h.gch  hell.out  main.c  test1  test2  twolist.c
libft/includes/: libft.h
